<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="5dp"
    tools:context=".DetalhesCursoActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detalhes_do_curso"
        android:layout_gravity="center"
        android:fontFamily="casual"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginVertical="10dp"
        android:src="@drawable/noimage"
        android:id="@+id/imagemCurso" />


    <EditText
        android:id="@+id/edit_nome"
        android:layout_width="match_parent"
        android:gravity="center"
        android:enabled="false"
        android:layout_height="wrap_content"
        android:hint="@string/nome" />

    <EditText
        android:id="@+id/edit_local"
        android:layout_width="match_parent"
        android:gravity="center"
        android:enabled="false"
        android:layout_height="wrap_content"
        android:hint="@string/local" />

    <EditText
        android:id="@+id/edit_data_inicio"
        android:layout_width="match_parent"
        android:gravity="center"
        android:enabled="false"
        android:layout_height="wrap_content"
        android:hint="@string/data_de_inicio" />

    <EditText
        android:id="@+id/edit_data_fim"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:hint="@string/data_de_fim" />

    <EditText
        android:id="@+id/edit_preco"
        android:layout_width="match_parent"
        android:gravity="center"
        android:inputType="numberDecimal"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:hint="@string/preco" />

    <EditText
        android:id="@+id/edit_duracao"
        android:layout_width="match_parent"
        android:gravity="center"
        android:inputType="number"
        android:enabled="false"
        android:layout_height="wrap_content"
        android:hint="@string/duracao_horas" />

    <EditText
        android:id="@+id/edit_edicao"
        android:layout_width="match_parent"
        android:gravity="center"
        android:inputType="number"
        android:enabled="false"
        android:layout_height="wrap_content"
        android:hint="@string/edicao_numero" />

    <LinearLayout
        android:id="@+id/layout_editar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_editar"
            android:layout_width="0dp"
            android:textColor="@color/black"
            android:backgroundTint="#C7E4EE"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:text="@string/editar" />

        <Button
            android:id="@+id/button_voltar"
            android:layout_width="0dp"
            android:textColor="@color/black"
            android:backgroundTint="#C7E4EE"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:text="@string/voltar" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/layout_editar_eliminar"
        android:layout_width="match_parent"
        android:visibility="gone"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:padding="1dp"
            android:textColor="@color/black"
            android:backgroundTint="#C7E4EE"
            android:text="@string/salvar"
            android:layout_marginHorizontal="10dp"
            android:id="@+id/button_salvar"/>

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:padding="1dp"
            android:textColor="@color/black"
            android:backgroundTint="#C7E4EE"
            android:text="@string/cancelar"
            android:layout_marginHorizontal="10dp"
            android:layout_height="wrap_content"
            android:id="@+id/button_cancelar"/>

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:padding="1dp"
            android:textColor="@color/black"
            android:backgroundTint="#C7E4EE"
            android:text="@string/apagar"
            android:layout_marginHorizontal="10dp"
            android:layout_height="wrap_content"
            android:id="@+id/button_apagar"/>

    </LinearLayout>


</LinearLayout>
