<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_margin="15dp"
    tools:context=".SobreActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:gravity="center"
        android:text="@string/sobre_sobre"
        android:textColor="#00008b"
        android:textSize="50sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/aplica_o_desenvolvida_por"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="20dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Anne Sophie da Silva"
        android:textAlignment="center"
        android:textSize="20dp" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/complementos"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_marginTop="50dp"
        android:textSize="20dp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/splashscreen"
        android:textAlignment="center"
        android:textSize="20dp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/icone_na_app"
        android:textAlignment="center"
        android:textSize="20dp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/som_no_botao_entrar_e_sair"
        android:textAlignment="center"
        android:textSize="20dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/autoavaliacao"
        android:layout_marginTop="50dp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textSize="20dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="20"
        android:textAlignment="center"
        android:textSize="20dp" />

    <Button
        android:id="@+id/button_voltar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="1dp"
        android:textColor="@color/black"
        android:backgroundTint="#C7E4EE"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="100dp"
        android:layout_marginTop="50dp"
        android:text="@string/voltar_sobre" />

</LinearLayout>