<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="#00008b"
            android:textSize="50sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:gravity="center"
            android:text="@string/preencha_o_seu_username_e_password"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">


            <EditText
                android:drawableStart="@drawable/baseline_person_outline_24"
                android:id="@+id/edit_username"
                android:hint="@string/username"
                android:layout_width="wrap_content"
                android:textAlignment="center"
                android:layout_height="wrap_content"
                android:minWidth="200dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="25dp"
            android:orientation="horizontal">


            <EditText
                android:drawableStart="@drawable/outline_lock_24"
                android:id="@+id/edit_password"
                android:hint="@string/password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:inputType="textPassword"
                android:minWidth="200dp" />

        </LinearLayout>

        <Button
            android:id="@+id/button_entrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="1dp"
            android:layout_marginLeft="25dp"
            android:textColor="@color/black"
            android:backgroundTint="#C7E4EE"
            android:layout_marginRight="25dp"
            android:text="@string/entrar" />

    </LinearLayout>

    <Button
        android:id="@+id/button_sobre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="1dp"
        android:textColor="@color/black"
        android:backgroundTint="#C7E4EE"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="100dp"
        android:layout_marginTop="630dp"
        android:text="@string/sobre" />

</RelativeLayout>